name:                persistent-dbmigrations
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nicholas Mojarovskiy
maintainer:          nickmojarovskiy@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Database.Persist.Schema.Migrations
    Database.Persist.Schema.Migrations.Persist
  build-depends:
      base
    , dbmigrations >= 0.8
    , containers
    , persistent >= 1.3.1.1
    , shakespeare
    , transformers
    , text
    , split

  hs-source-dirs:      src
  default-language:    Haskell2010
